<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">"SmartBirds Pro"</string>
    <string name="title_activity_start_monitoring">"Begin monitoring"</string>
    <string name="title_activity_monitoring">"Monitoring"</string>
    <string name="title_activity_form">"Active form"</string>
    <string name="title_activity_edit">"Edit common form"</string>
    <string name="cancel_monitoring">"Cancel monitoring"</string>
    <string name="really_cancel_monitoring">"This will delete all data from this monitoring!
Do you really want to cancel the monitoring?"</string>
    <string name="clear">"Clear"</string>
    <string name="cancel_entry">"Cancel entry"</string>
    <string name="really_cancel_entry">"Do you really want to cancel the entry?"</string>
    <string name="cancel_edit_entry">"Cancel entry edit"</string>
    <string name="really_cancel_edit_entry">"Do you really want to discard entry changes?"</string>
    <string name="entry_type_cbm">"Common Bird Monitoring (CBM)"</string>
    <string name="entry_type_birds">"Birds"</string>
    <string name="entry_type_ciconia">"White stork"</string>
    <string name="entry_type_herptile">"Amphibians and reptiles"</string>
    <string name="entry_type_mammal">"Mammals"</string>
    <string name="entry_type_humid">"Wetlands zones"</string>
    <string name="entry_type_invertebrates">"Invertebrates"</string>
    <string name="required_field">"Required field"</string>
    <string name="monitoring_notification_title">"Monitoring"</string>
    <string name="monitoring_notification_content">"Monitoring started"</string>
    <string name="menu_entry_save">"Save"</string>
    <string name="menu_entry_add_photo">"+ Photo"</string>
    <string name="menu_monitoring_finish">"Finish"</string>
    <string name="menu_monitoring_new_entry">"New entry"</string>
    <string name="menu_monitoring_new_specific_entry">"New %s entry"</string>
    <string name="menu_monitoring_common">"Common"</string>
    <string name="menu_monitoring_zoom_500">"500 m"</string>
    <string name="menu_monitoring_zoom_free">"Free"</string>
    <string name="menu_monitoring_zoom_1000">"1 km"</string>
    <string name="menu_monitoring_zoom_250">"250 m"</string>
    <string name="menu_monitoring_zoom_100">"100 m"</string>
    <string name="menu_monitoring_map_normal">"Normal"</string>
    <string name="menu_monitoring_map_satellite">"Satellite"</string>
    <string name="menu_monitoring_map_hybrid">"Hybrid"</string>
    <string name="menu_monitoring_map_provider">"Map from:"</string>
    <string name="menu_monitoring_map_provider_google">"Google"</string>
    <string name="menu_monitoring_map_provider_osm">"OSM"</string>
    <string name="menu_monitoring_stay_awake">"Always on"</string>
    <string name="menu_monitoring_show_zone_background">"Polygons background"</string>
    <string name="menu_monitoring_start">"Start"</string>
    <string name="menu_monitoring_save">"Save"</string>
    <string name="main_screen_btn_start">"Start"</string>
    <string name="main_screen_btn_upload">"Upload to smartbirds.org"</string>
    <string name="monitoring_birds_notes">"Remarks"</string>
    <string name="monitoring_common_source">"Project"</string>
    <string name="monitoring_common_start_date">"Beginning:"</string>
    <string name="monitoring_common_date">"Date"</string>
    <string name="monitoring_common_time">"Time"</string>
    <string name="monitoring_common_place">"Place"</string>
    <string name="monitoring_common_end_date">"End:"</string>
    <string name="monitoring_common_observers">"Other observers"</string>
    <string name="monitoring_common_rain">"Rain"</string>
    <string name="monitoring_common_temperature">"Temp °C"</string>
    <string name="monitoring_common_wind_strength">"Wind strength"</string>
    <string name="monitoring_common_wind_direction">"Wind direction"</string>
    <string name="monitoring_common_clouds">"Clouds type"</string>
    <string name="monitoring_common_cloudiness">"Cloudiness %"</string>
    <string name="monitoring_common_mto">"Weather (Other)"</string>
    <string name="monitoring_common_visibility">"Visibility km"</string>
    <string name="monitoring_common_threats">"Threats"</string>
    <string name="monitoring_common_notes">"Remarks"</string>
    <string name="monitoring_birds_name">"Species"</string>
    <string name="monitoring_birds_private">"Confidential"</string>
    <string name="monitoring_birds_count_unit">"Count unit"</string>
    <string name="monitoring_birds_count_type">"Count type"</string>
    <string name="monitoring_birds_nesting">"Nest type"</string>
    <string name="monitoring_birds_count">"Count"</string>
    <string name="monitoring_birds_min">"Min."</string>
    <string name="monitoring_birds_max">"Max."</string>
    <string name="monitoring_birds_gender">"Sex"</string>
    <string name="monitoring_birds_age">"Age"</string>
    <string name="monitoring_birds_marking">"Mark presence"</string>
    <string name="monitoring_birds_status">"Bird status"</string>
    <string name="monitoring_birds_behaviour">"Behavior"</string>
    <string name="monitoring_birds_death">"Dead specimen (reasons)"</string>
    <string name="monitoring_birds_substrate">"Substrate"</string>
    <string name="monitoring_birds_tree">"Tree"</string>
    <string name="monitoring_birds_tree_height">"Tree height"</string>
    <string name="monitoring_birds_tree_location">"Tree location"</string>
    <string name="monitoring_birds_nest_height">"Nest height"</string>
    <string name="monitoring_birds_nest_location">"Nest location"</string>
    <string name="monitoring_birds_incubation">"Incubation"</string>
    <string name="monitoring_birds_eggs_count">"Number of eggs"</string>
    <string name="monitoring_birds_small_downy_count">"Number of pull."</string>
    <string name="monitoring_birds_small_feathered_count">"Number of fledglings"</string>
    <string name="monitoring_birds_takeoff_count">"Number of successfully fledged juveniles"</string>
    <string name="monitoring_birds_nest_guard">"Nest guarding"</string>
    <string name="monitoring_birds_female_age">"Age of the female"</string>
    <string name="monitoring_birds_male_age">"Age of the male"</string>
    <string name="monitoring_birds_nest_success">"Breeding success"</string>
    <string name="monitoring_birds_land_use">"Land uses, radius 300 m"</string>
    <string name="monitoring_cbm_name">"Species"</string>
    <string name="monitoring_cbm_distance">"Distance"</string>
    <string name="monitoring_cbm_count">"Count"</string>
    <string name="monitoring_ciconia_substratum">"Substrate"</string>
    <string name="monitoring_ciconia_column">"Pylon"</string>
    <string name="monitoring_ciconia_nest_artificial">"Nest on artificial platform"</string>
    <string name="monitoring_ciconia_column_type">"Pylon type"</string>
    <string name="monitoring_ciconia_tree">"Tree"</string>
    <string name="monitoring_ciconia_building">"Building"</string>
    <string name="monitoring_ciconia_nest_artificial_human">"Nest on humanmade artificial platform"</string>
    <string name="monitoring_ciconia_nest_other">"Nest on another substrate"</string>
    <string name="monitoring_ciconia_not_occupied">"This year the nest is NOT occupied by White storks"</string>
    <string name="monitoring_ciconia_new_birds">"This year one/two birds came to the nest"</string>
    <string name="monitoring_ciconia_date_appear">"Approximate date of stork arrival"</string>
    <string name="monitoring_ciconia_disappear">"Approximate date of stork disappearance"</string>
    <string name="monitoring_ciconia_this_year">"This year in the nest appeared"</string>
    <string name="monitoring_ciconia_small_count">"Number of juveniles in nest"</string>
    <string name="monitoring_ciconia_not_occupied_more_than_year">"The nest in NOT inhabited in MORE THAN one year"</string>
    <string name="monitoring_ciconia_small_death_electricity">"Information for electrocuted juveniles"</string>
    <string name="monitoring_ciconia_small_death_from_parent">"Information for juveniles rejected by the parents"</string>
    <string name="monitoring_ciconia_small_death_other">"Juveniles died from other causes"</string>
    <string name="monitoring_ciconia_cause">"Cause"</string>
    <string name="monitoring_ciconia_notes">"Remarks"</string>
    <string name="monitoring_herp_name">"Species"</string>
    <string name="monitoring_herp_gender">"Sex"</string>
    <string name="monitoring_herp_age">"Age"</string>
    <string name="monitoring_herp_habitat">"Habitat"</string>
    <string name="monitoring_herp_danger_observation">"Findings"</string>
    <string name="monitoring_herp_count">"Count"</string>
    <string name="monitoring_herp_marking">"Marking"</string>
    <string name="monitoring_herp_axis_distance">"Distance from axis"</string>
    <string name="monitoring_herp_weight">"Weight (g)"</string>
    <string name="monitoring_herp_scl">"SCL / L (mm)"</string>
    <string name="monitoring_herp_mpl">"MPL / Lcd (mm)"</string>
    <string name="monitoring_herp_mcw">"MCW (mm)"</string>
    <string name="monitoring_herp_h">"H / Lcap (mm)"</string>
    <string name="monitoring_herp_t_substrate">"Т, substrate"</string>
    <string name="undo_last_entry">"Cancel last entry"</string>
    <string name="main_screen_btn_export">"Export"</string>
    <string name="monitoring_type">"Type of observation"</string>
    <string name="main_screen_btn_info">"Information"</string>
    <string name="main_screen_btn_help">"Help"</string>
    <string name="prompt_email">"Email"</string>
    <string name="prompt_password">"Password"</string>
    <string name="action_sign_in">"Sign in"</string>
    <string name="action_sign_in_short">"Sign in"</string>
    <string name="action_register">"Register"</string>
    <string name="main_screen_btn_browse">"Browse"</string>
    <string name="gdpr_agree_checkbox">"I agree with the conditions of the General Data Protection Regulation (GDPR)"</string>
    <string name="view_gdpr">"view"</string>
    <string name="main_screen_btn_stats">"Statistics"</string>
    <string name="filter_monitoring_status_finished">"Finished"</string>
    <string name="filter_monitoring_status_uploaded">"Uploaded"</string>
    <string name="filter_monitoring_status_paused">"Paused"</string>
    <string name="filter_monitoring_status_canceled">"Canceled"</string>
    <string name="settings_monitoring_forms">"Monitoring forms"</string>
    <string name="settings_monitoring_forms_summary">"Select active monitoring forms."</string>
    <string name="settings_category_general">"General"</string>
    <string name="settings_category_monitoring">"Map"</string>
    <string name="settings_category_layers">"Layers"</string>
    <string name="settings_map_provider">"Maps provider"</string>
    <string name="settings_map_type">"Map type"</string>
    <string name="settings_view">"View"</string>
    <string name="settings_always_on">"Always on"</string>
    <string name="settings_always_on_summary">"Screen is always on during observation"</string>
    <string name="settings_polygons_bg">"Polygons background"</string>
    <string name="settings_polygons_bg_summary">"Draw polygons background"</string>
    <string name="settings_local_projects">"Storks in Belozem"</string>
    <string name="settings_local_projects_summary">"Show stork nests in Belozem"</string>
    <string name="settings_bg_atlas">"Squares of BG Atlas"</string>
    <string name="settings_bg_atlas_summary">"Show selected BG Atlas cells (10x10 km)"</string>
    <string name="settings_spa">"SPA"</string>
    <string name="settings_spa_summary">"Show special protected areas by Natura 2000 in Bulgaria"</string>
    <string name="settings_category_advanced">"Advanced"</string>
    <string name="settings_export_db">"Export DB"</string>
    <string name="settings_export_db_summary">"Export the DB in Downloads."</string>
</resources>