<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_finish"
        android:menuCategory="container"
        android:orderInCategory="50"
        app:showAsAction="always"
        android:title="@string/menu_monitoring_finish" />
    <item
        android:id="@+id/action_new_entry"
        android:enabled="false"
        android:menuCategory="container"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/menu_monitoring_new_entry" />
    <item
        android:id="@+id/action_undo_last_entry"
        android:enabled="false"
        android:menuCategory="container"
        android:orderInCategory="125"
        app:showAsAction="ifRoom"
        android:title="@string/undo_last_entry" />
    <item
        android:id="@+id/action_common_form"
        android:menuCategory="container"
        android:orderInCategory="75"
        app:showAsAction="always"
        android:title="@string/menu_monitoring_common" />

    <item
        android:id="@+id/menu_zoom"
        android:menuCategory="alternative"
        app:showAsAction="ifRoom"
        android:title="@string/menu_monitoring_zoom_500">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_zoom_free"
                    android:title="@string/menu_monitoring_zoom_free" />

                <item
                    android:id="@+id/action_zoom_1km"
                    android:title="@string/menu_monitoring_zoom_1000" />

                <item
                    android:id="@+id/action_zoom_500m"
                    android:checked="true"
                    android:title="@string/menu_monitoring_zoom_500" />

                <item
                    android:id="@+id/action_zoom_250m"
                    android:title="@string/menu_monitoring_zoom_250" />

                <item
                    android:id="@+id/action_zoom_100m"
                    android:title="@string/menu_monitoring_zoom_100" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_map"
        android:menuCategory="alternative"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_monitoring_map_normal">
        <menu>

            <group
                android:checkableBehavior="single"
                android:menuCategory="alternative">
                <item
                    android:id="@+id/action_map_google_normal"
                    android:checked="true"
                    android:title="@string/menu_monitoring_map_normal" />

                <item
                    android:id="@+id/action_map_google_satellite"
                    android:title="@string/menu_monitoring_map_satellite" />

                <item
                    android:id="@+id/action_map_google_hybrid"
                    android:title="@string/menu_monitoring_map_hybrid" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_map_provider"
        android:menuCategory="alternative"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_monitoring_map_provider">
        <menu>

            <group
                android:checkableBehavior="none"
                android:menuCategory="alternative">
                <item
                    android:id="@+id/action_map_google"
                    android:title="@string/menu_monitoring_map_provider_google" />

                <item
                    android:id="@+id/action_map_osm"
                    android:title="@string/menu_monitoring_map_provider_osm" />

            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_stay_awake"
        android:checkable="true"
        android:checked="false"
        android:enabled="true"
        android:menuCategory="system"
        android:title="@string/menu_monitoring_stay_awake" />
    <item
        android:id="@+id/menu_form_type"
        android:menuCategory="alternative"
        app:showAsAction="ifRoom|withText"
        android:title="@string/monitoring_type">
        <menu>

            <group
                android:checkableBehavior="single"
                android:menuCategory="alternative">
                <item
                    android:id="@+id/action_form_type_birds"
                    android:title="@string/entry_type_birds" />

                <item
                    android:id="@+id/action_form_type_humid"
                    android:title="@string/entry_type_humid" />

                <item
                    android:id="@+id/action_form_type_cbm"
                    android:title="@string/entry_type_cbm" />

                <item
                    android:id="@+id/action_form_type_ciconia"
                    android:title="@string/entry_type_ciconia" />

                <item
                    android:id="@+id/action_form_type_herp"
                    android:title="@string/entry_type_herp" />

            </group>
        </menu>
    </item>
</menu>